Compilation is now java 9+ and jpms aware (thoug we might need to bring back Java 8 support).